animaciones incluidas, falta poner variables de sass

--- a/views/alimentos.html
+++ b/views/alimentos.html
@@ -8,9 +8,11 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
       <!--link a mi css-->
     <link rel="stylesheet" href="../css/main.css">
-    <title>Finca Don Juan</title>
+                     <!---titulo-->
+    <title>Finca Don Juan | Informacion Nutricional</title>
     <link rel="shortcut icon" href="../img/1.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e18cc0d570.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Informacion para que sepas lo que vos y tus clientes van a consumir">
 </head>
 <body>
                                             <!--JS DE BOOSTRAP-->
@@ -71,23 +73,14 @@
 
 <div class="alimento">
     <div class="container">	
-    <!-- Start	Product details -->
         <div class="product-details">
-            <!-- 	Product Name -->
         <h2>Aceite oliva</h2>   
         <p class="information">Protege contra la inflamación, el estrés oxidativo y el riesgo cardiovascular provocados por el envejecimiento.</p>  
-    <!-- 		Control -->
     <div class="control">
-    <!-- Start Button buying -->
-        <button class="btn btnAlimento">
-    <!-- 		the Price -->
+        <a href="oliva.html" class="btn btnAlimento">
             <span class="price">Ir a</span>
-    <!-- 		shopping cart icon-->
-    <!-- 		Buy Now / ADD to Cart-->
-        <span class="buy">Comprar ya!</span>
-        </button>
-        <!-- End Button buying -->
-        
+            <span class="buy">Comprar ya!</span>
+        </a>        
     </div>
                 
     </div>
@@ -114,22 +107,14 @@
                                                         <!--ALIMENTO3-->
 <div class="alimento ">
     <div class="container">	
-    <!-- Start	Product details -->
         <div class="product-details">
-            <!-- 	Product Name -->
-        <h2>Pistachos</h2>   
+        <h2>Miel</h2>   
         <p class="information">Además de usarse como edulcorante natural, la miel se usa como antiinflamatorio, antioxidante y agente antibiótico.</p>  
-    <!-- 		Control -->
     <div class="control">
-        
-    <!-- Start Button buying -->
-        <button class="btn btnAlimento">
-    <!-- 		the Price -->
+        <a href="miel.html" class="btn btnAlimento">
             <span class="price">Ir a</span>
-    <!-- 		shopping cart icon-->
-    <!-- 		Buy Now / ADD to Cart-->
-        <span class="buy">Comprar ya!</span>
-        </button>
+            <span class="buy">Comprar ya!</span>
+        </a>
         <!-- End Button buying -->
         
     </div>
@@ -158,24 +143,16 @@
                                             <!--ALIMENTO4-->
 <div class="alimento">
     <div class="container">	
-    <!-- Start	Product details -->
         <div class="product-details">
-            <!-- 	Product Name -->
+            <!--nombre y descripcion-->
         <h2>Pasas</h2>   
         <p class="information">Ayudan a controlar la glucosa por sus ácidos omega-3. Regulan la presión arterial y la diabetes 1 y 2. Previenen la hipertensión gracias a su gran cantidad de antioxidantes.</p>  
-    <!-- 		Control -->
+        <!--boton de comprar-->
     <div class="control">
-        
-    <!-- Start Button buying -->
-        <button class="btn btnAlimento">
-    <!-- 		the Price -->
+        <a href="pasas.html" class="btn btnAlimento">
             <span class="price">Ir a</span>
-    <!-- 		shopping cart icon-->
-    <!-- 		Buy Now / ADD to Cart-->
-        <span class="buy">Comprar ya!</span>
-        </button>
-        <!-- End Button buying -->
-        
+            <span class="buy">Comprar ya!</span>
+        </a>        
     </div>
                 
     </div>
@@ -183,271 +160,20 @@
         
         <img src="../img/pasas-alimentos.jpg" alt="miel">
         
-    <!-- 	product Information-->
+            <!--Informacion nutricional-->
     <div class="info">
         <ul>
             <li>-Cantidades cada 100g-</li>
-            <li><b>Proteinas</b>: 4,37g</li>
-            <li><strong>Grasas</strong>0</li>
-            <li><strong>Azucares</strong>12</li>
-            <li><strong></strong>2 - 3 feet</li>
+            <li><strong>Agua</strong> : 4,37g</li>
+            <li><strong>Calorias</strong> : 560kcal</li>
+            <li><strong>Proteinas</strong> : 20g</li>
+            <li><strong>Grasas totales</strong> : 45g</li>
         </ul>
     </div>
     </div>
-    <!--  End product image  -->
-
-
     </div>
-</div>
-                                                        
+</div>                                            
 </main>
-
-
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        
-        <!--producto1-->
-       <!-- <div class="alimento">
-            <div class="infoAlimento">
-                <a href="pistacho.html">
-                    <img src="../img/pistachos-alimentos.jpg" alt="Pistachos">
-                </a>
-                <h2 class="tituloALimento">Pistachos</h2>
-            </div>
-            <div class="descAlimento">
-                    <table class="table table-dark table-striped">
-                        <tbody>
-                        <tr>
-                            <th>Nombre</th>
-                            <th>Cantidad</th>
-                        </tr><tr>
-                            <td>Agua</td>
-                            <td>4.37 g</td>
-                        </tr>
-                        <tr>
-                            <td>Calorías</td>
-                            <td>560 Kcal</td>
-                        </tr>
-                        <tr>
-                            <td>Proteínas</td>
-                            <td>20 g</td>
-                        </tr>
-                        <tr>
-                            <td>Grasas Totales</td>
-                            <td>45 g</td>
-                        </tr>
-                    </table>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Incidunt repudiandae natus dolorem, ea maiores libero recusandae ullam laboriosam reiciendis, hic minima eaque possimus corrupti odio?</p>
-                    <a href="pistacho.html" class="btn">Comprar</a>
-            </div>
-            
-        </div>-->
-                                    <!-- producto2 -->
-       
-      <!--   <div class="alimento">
-            <div class="imgAlimento">
-                <img src="../img/aceite-tienda.jpg" alt="pistachos">
-            </div>
-            <div class="infoAlimento">
-                <div class="tabla">
-                    <table class="table table table-dark table-striped">
-                        <tbody>
-                        <tr>
-                            <th>Nombre</th>
-                            <th>Cantidad</th>
-                        </tr><tr>
-                            <td>Agua</td>
-                            <td>4.37 g</td>
-                        </tr>
-                        <tr>
-                            <td>Calorías</td>
-                            <td>560 Kcal</td>
-                        </tr>
-                        <tr>
-                            <td>Proteínas</td>
-                            <td>20 g</td>
-                        </tr>
-                        <tr>
-                            <td>Grasas Totales</td>
-                            <td>45 g</td>
-                        </tr>
-                    </table>
-                </div>
-                    <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci ea inventore reprehenderit perferendis error quasi ipsam eum cupiditate tenetur esse natus at, delectus repellendus, impedit voluptates nulla eveniet, itaque asperiores magni aut nisi. Consequuntur sapiente praesentium repellendus eligendi hic rerum iusto, minima libero. Accusamus praesentium iste, perferendis ratione ipsa ea velit, iure rem illum labore in exercitationem illo molestias et, sint id numquam ex enim nostrum cupiditate impedit. Cupiditate, iure.</p>
-                    <a href="oliva.html" class="btn">Comprar</a>
-                </div>
-        </div>
-                                 producto3-->
-         <!-- <div class="alimento">
-            <div class="imgAlimento">
-                <img src="../img/miel-alimento.jpg" alt="pistachos">
-            </div>
-            <div class="infoAlimento">
-                <div class="tabla">
-                    <table class="table table table-dark table-striped">
-                        <tbody>
-                        <tr>
-                            <th>Nombre</th>
-                            <th>Cantidad</th>
-                        </tr><tr>
-                            <td>Agua</td>
-                            <td>4.37 g</td>
-                        </tr>
-                        <tr>
-                            <td>Calorías</td>
-                            <td>560 Kcal</td>
-                        </tr>
-                        <tr>
-                            <td>Proteínas</td>
-                            <td>20 g</td>
-                        </tr>
-                        <tr>
-                            <td>Grasas Totales</td>
-                            <td>45 g</td>
-                        </tr>
-                    </table>
-                </div>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero nihil error in! Soluta iusto veniam facilis voluptatum facere? Harum beatae itaque ex impedit voluptates quod, similique ipsa quo exercitationem voluptatum minima deleniti maxime non et accusamus, illo iusto culpa recusandae necessitatibus. Recusandae saepe, nisi in tempora et temporibus blanditiis itaque fugiat vel corporis voluptate neque necessitatibus facere ex, nihil aut ea eos fuga id eius ut dolor quae aperiam? Ipsa!</p>
-                    <a href="miel.html" class="btn">Comprar</a>
-                </div>
-        </div>
-                                            <!--producto4
-         <div class="alimento mb-3">
-            <div class="imgAlimento">
-                <img src="../img/pasas-alimentos.jpg" alt="pistachos">
-            </div>
-            <div class="infoAlimento">
-                <div class="tabla">
-                    <table class="table table table-dark table-striped">
-                        <tbody>
-                        <tr>
-                            <th>Nombre</th>
-                            <th>Cantidad</th>
-                        </tr><tr>
-                            <td>Agua</td>
-                            <td>4.37 g</td>
-                        </tr>
-                        <tr>
-                            <td>Calorías</td>
-                            <td>560 Kcal</td>
-                        </tr>
-                        <tr>
-                            <td>Proteínas</td>
-                            <td>20 g</td>
-                        </tr>
-                        <tr>
-                            <td>Grasas Totales</td>
-                            <td>45 g</td>
-                        </tr>
-                    </table>
-                </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur sint distinctio dolor ullam ab nulla voluptatibus accusamus ipsum modi non laborum suscipit odio expedita, reiciendis, id nam labore odit consequatur quisquam aliquid omnis? Nihil saepe facilis ducimus, ullam pariatur atque. Tempora, ut. Sequi earum dicta repudiandae sapiente sed harum, error quos ex perferendis corrupti explicabo molestias nisi aperiam ducimus excepturi cupiditate vitae. Ipsum itaque blanditiis minus aspernatur consequuntur? Quia, natus.</p>
-                    <a href="pasas.html" class="btn">Comprar</a>
-                </div>
-        </div> -->
                   <!--ends main-->
                   <!--Empieza footer-->
         <footer>
