--- a/views/galeria.html
+++ b/views/galeria.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--link a mi css-->
     <link rel="stylesheet" href="../css/main.css">
-    <title>Finca Don Juan</title>
+    <!--limk a animacion-->
+     <!--link a animacion-->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <title>Finca Don Juan | Galeria</title>
     <link rel="shortcut icon" href="../img/1.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e18cc0d570.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Disfruta de un almuerzo con los mejores paisajes que puedas imaginar">
 </head>
 <body>
     <body>
@@ -41,19 +46,19 @@
             <img class="foto" src="../img/galeria/apicultor.jpg" alt="apicultor">
         </div>
         <!--foto2-->
-        <div class="item">
+        <div class="item animate__animated animate__fadeInDown animate__slower">
             <img class="foto" src="../img/galeria/apicultura.jpg" alt="apicultura">
         </div>
         <!--foto3-->
          <div class="item">
-            <img class="foto" src="../img/galeria/arbol.jpg" alt="">
+            <img class="foto" src="../img/galeria/arbol1.jpg" alt="">
         </div>
         <!--foto4-->
-        <div class="item">
+        <div class="item animate__animated animate__fadeInRight animate__slower">
             <img class="foto" src="../img/galeria/olivos.jpg" alt="olivos">
         </div>
         <!--foto5-->
-        <div class="item">
+        <div class="item  animate__animated animate__fadeInLeft animate__slower">
             <img class="foto" src="../img/galeria/fotofinca.jpg" alt="pistachos">
         </div>
         <!--foto6-->
@@ -73,7 +78,7 @@
             <img class="foto" src="../img/galeria/secadero.jpg" alt="secadero">
         </div>        
         <!--foto10-->
-        <div class="item">
+        <div class="item  animate__animated animate__fadeInUpBig animate__slow">
             <img class="foto" src="../img/galeria/viñedo2.jpg" alt="viñedo">
         </div>        
         <!--foto11-->
