--- a/views/oliva.html
+++ b/views/oliva.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Finca Don Juan</title>
+        <title>Finca Don Juan | ACEITE</title>
           <!--icono-->
           <link rel="shortcut icon" href="../img/1.png" type="image/x-icon">
         <script src="https://kit.fontawesome.com/e18cc0d570.js" crossorigin="anonymous"></script>
@@ -12,7 +12,7 @@
          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
          <!--link a mi css-->
         <link rel="stylesheet" href="../css/main.css">
-    
+    <meta name="description" content="Aceite extra virgen">
     </head>
     <body>
                                                     <!--JS DE BOOSTRAP-->
@@ -35,9 +35,7 @@
                   <!--ends header-->
                   <div class="linea"></div>
                   <!--Empieza producto--> 
-    
-   <!-- <main class="producto col-sm-12 col-md-6">-->
-     <h1>Aceite de oliva</h1>
+         <h1>Aceite de oliva</h1>
      <main class="producto">
         <div class="containerImg">
             <img src="../img/oliva-producto.jpg" class="rounded-start" alt="Pistachos">
