--- a/css/main.css
+++ b/css/main.css
@@ -580,18 +580,17 @@ footer a i:hover {
     justify-content: center;
     align-content: center;
     text-align: center;
-    height: 100%;
+    height: 85%;
     flex-direction: column;
     flex-wrap: nowrap;
   }
   .product-details {
     justify-content: center;
-    width: 85%;
+    width: 100%;
     text-align: center;
   }
   .product-details .information {
     width: 100%;
-    transform: translateX(15%);
   }
   .product-image {
     width: 100%;
@@ -601,13 +600,13 @@ footer a i:hover {
     height: 85%;
     width: 100%;
   }
-  .product-image:focus .info {
+  .product-image:focus-visible .info {
     transform: translateX(0);
   }
-  .product-image:focus img {
+  .product-image:focus-visible img {
     transition: all 0.3s ease-out;
   }
-  .product-image:focus img {
+  .product-image:focus-visible img {
     transform: scale(1.7, 1.7);
   }
 }
