--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -79,17 +79,16 @@
         justify-content: center;
         align-content: center;
         text-align: center;
-        height: 100%;
+        height: 85%;
         flex-direction: column;
         flex-wrap: nowrap;
     }
     .product-details{
         justify-content: center;
-        width: 85%;
+        width: 100%;
         text-align: center;
         .information{
             width: 100%;
-            transform: translateX(15%);
         }
     }
     .product-image{
@@ -101,13 +100,13 @@
 
         }
     }
-    .product-image:focus .info{
+    .product-image:focus-visible .info{
         transform: translateX(0);
     }
-    .product-image:focus img {
+    .product-image:focus-visible img {
         transition: all 0.3s ease-out;
     }
-    .product-image:focus img {
+    .product-image:focus-visible img {
         transform: scale(1.7, 1.7);
     }
 }
