--- a/views/contacto.html
+++ b/views/contacto.html
@@ -8,13 +8,16 @@
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
      <!--limk a mi css-->
     <link rel="stylesheet" href="../css/main.css">
-    <title>Finca Don Juan</title>
+      <!--link a animacion-->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <title>Finca Don Juan | Contacto</title>
     <link rel="shortcut icon" href="../img/1.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/e18cc0d570.js" crossorigin="anonymous"></script>
+    <meta name="description" content="Dejanos tus consultas o sugerencias a traves de nuestro formulario de contacto">
 </head>
 <body>
-                                                            <!--JS DE BOOSTRAP-->
-                                                            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+                    <!--JS DE BOOSTRAP-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
                   <!--start header-->
        <div class="header">
             <nav>
@@ -35,7 +38,7 @@
                   <!--empieza espacio para consultas-->
     <main class="containerForm">
         <form action="mailto:fincadonjuan@gmail.com" class="formulario mt-3 mb-3">  
-            <img src="../img/clip.png" alt="Enviar consulta" class="formImg">
+            <img src="../img/clip.png" alt="Enviar consulta" class="formImg animate__animated animate__shakeX">
 
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
