--- a/views/pasas.html
+++ b/views/pasas.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Finca Don Juan</title>
+        <title>Finca Don Juan | PASAS</title>
           <!--icono-->
           <link rel="shortcut icon" href="../img/1.png" type="image/x-icon">
         <script src="https://kit.fontawesome.com/e18cc0d570.js" crossorigin="anonymous"></script>
@@ -12,7 +12,7 @@
          <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
          <!--link a mi css-->
         <link rel="stylesheet" href="../css/main.css">
-    
+    <meta name="description" content="Como snack saludable. Ideales para acompañar algún yogur, ensaladas, budines, barritas de cereal, frutos secos, panes, cookies, pancakes.">
     </head>
     <body>
                                                     <!--JS DE BOOSTRAP-->
