--- a/views/alimentos.html
+++ b/views/alimentos.html
@@ -39,9 +39,8 @@
                             <!--ALIMENTO1-->
 <div class="alimento">
     <div class="container">	
-    <!-- Start	Product details -->
-        <div class="product-details">
-            <!-- 	Product Name -->
+    <!-- Empieza info del producto -->
+        <div class="infoAlimento">
         <h2>Pistachos</h2>   
         <p class="information">Los pistachos son uno de los frutos secos más saludables porque contienen un equilibrio completo de nutrientes: carbohidratos, proteínas, aminoácidos, grasas y fibra dietética. </p>  
     <!-- 		Control -->
@@ -73,7 +72,7 @@
 
 <div class="alimento">
     <div class="container">	
-        <div class="product-details">
+        <div class="infoAlimento">
         <h2>Aceite oliva</h2>   
         <p class="information">Protege contra la inflamación, el estrés oxidativo y el riesgo cardiovascular provocados por el envejecimiento.</p>  
     <div class="control">
@@ -107,7 +106,7 @@
                                                         <!--ALIMENTO3-->
 <div class="alimento ">
     <div class="container">	
-        <div class="product-details">
+        <div class="infoAlimento">
         <h2>Miel</h2>   
         <p class="information">Además de usarse como edulcorante natural, la miel se usa como antiinflamatorio, antioxidante y agente antibiótico.</p>  
     <div class="control">
@@ -143,7 +142,7 @@
                                             <!--ALIMENTO4-->
 <div class="alimento">
     <div class="container">	
-        <div class="product-details">
+        <div class="infoAlimento">
             <!--nombre y descripcion-->
         <h2>Pasas</h2>   
         <p class="information">Ayudan a controlar la glucosa por sus ácidos omega-3. Regulan la presión arterial y la diabetes 1 y 2. Previenen la hipertensión gracias a su gran cantidad de antioxidantes.</p>  
