--- a/views/contacto.html
+++ b/views/contacto.html
@@ -49,7 +49,7 @@
             <label for="mensaje">Mensaje:</label>
             <textarea id="mensaje" name="mensaje" required></textarea>
 
-            <input type="submit" class="btn boton" value="Enviar">
+            <a class="btn boton" href="../error404.html">Enviar</a>
           </form>
           <iframe class="mb-2" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d19213.358579913333!2d-68.58263774232793!3d-31.648248346275636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x96813fd491a1d90b%3A0x3503d20548b4237d!2sINTA!5e0!3m2!1ses-419!2sar!4v1680120601519!5m2!1ses-419!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </iframe>
         </div>
