--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,6 +2,7 @@
     width: 100%;
     height:95vh;
     background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.7)),url(../img/fondo-header.png);
+    background-attachment: fixed;
     background-size: cover;
     display: flex;
     flex-direction:column;
@@ -10,16 +11,11 @@
     background-position: center;
 }
 .header{
-    width: 100vw;
-    height: 100%;
-    background-image: linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,0.8)),url(../img/fondo-header.png);
+    @extend .header-index;
+    background-attachment:scroll;
     background-size: contain;
-    display: flex;
-    flex-direction:column;
-    align-content: center;
-    justify-content: center;
-    background-position: center;
-}
+    height: 100%;
+   } 
 nav{
     display: flex;
     text-align: center;
